# kotlin-tree-sitter

./: GetByteArrayElements_analysis.cc  README.md  build.py  settings.gradle.kts
lib/: build.gradle.kts
lib/src/main/cpp/: CMakeLists.txt  bundle.cpp  function_pointer.hpp  jni_helper.cpp  jni_helper.h  languages.h  ts_language.cpp  ts_language.h  ts_node.cpp  ts_parser.cpp  ts_query.cpp  ts_query_cursor.cpp  ts_tree.cpp  ts_tree_cursor.cpp  ts_utils.cpp  ts_utils.h
lib/src/main/kotlin/io/github/module/treesitter/: TSLanguage.kt  TSNode.kt  TSParser.kt  TSQuery.kt  TSQueryCursor.kt  TSTree.kt  TSTreeCursor.kt  TreeSitter.kt
lib/src/test/kotlin/io/github/module/treesitter/: TreeSitterTest.kt
lib/src/test/resources/src/c/: test.c
